# RPIPicoBasics

./: README.md
1-PicoFlash/: CMakeLists.txt
1-PicoFlash/src/: main.c
2-PicoWFlash/: CMakeLists.txt
2-PicoWFlash/src/: CMakeLists.txt  jdBlink1w.c
3-ExtFlash/src/: CMakeLists.txt  main.c
4-LEDFader/: CMakeLists.txt
4-LEDFader/src/: CMakeLists.txt  LED.cpp  LED.h  main.cpp
